[package]
name = "oled-esp32"
version = "0.1.0"
authors = ["Lucas Emerick <lucasvemerick@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"


[[bin]]
name = "oled-esp32"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std"]
std = ["esp-idf-sys/std", "esp-idf-hal/std"]

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.51", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
esp-idf-sys = { version = "0.36", features = ["binstart"] }
embedded-graphics = "0.8.1"
ssd1306 = "0.10.0"
esp-idf-hal = "0.45.2"
embedded-hal = "1.0.0"
anyhow = "1.0"

[build-dependencies]
embuild = "0.33"
